{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 28,
  "lineage": "ceaa81c2-d5c6-934a-d74c-df8beec7d83a",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:505375201410:security-group/sg-0b7ef79de0c392325",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7ef79de0c392325",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a31c7d2c3c5ddf3e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-cluster20201128210247925500000002",
            "name_prefix": "my-cluster",
            "owner_id": "505375201410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3d042dc2135b96"
          }
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:505375201410:security-group/sg-0a31c7d2c3c5ddf3e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a31c7d2c3c5ddf3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7ef79de0c392325"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7ef79de0c392325"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-cluster20201128211341660800000006",
            "name_prefix": "my-cluster",
            "owner_id": "505375201410",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a3d042dc2135b96"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2838680862",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b7ef79de0c392325",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2301762618",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b7ef79de0c392325",
            "self": false,
            "source_security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-901443208",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-744250530",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "self": false,
            "source_security_group_id": "sg-0b7ef79de0c392325",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1390669348",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "self": false,
            "source_security_group_id": "sg-0b7ef79de0c392325",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-981375638",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "self": false,
            "source_security_group_id": "sg-0a31c7d2c3c5ddf3e",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}